--- a/Appt/Base.lproj/Main.storyboard
+++ b/Appt/Base.lproj/Main.storyboard
@@ -688,7 +688,7 @@
         <scene sceneID="ml1-O5-V5B">
             <objects>
                 <tableViewController storyboardIdentifier="PatientDetailTVC" useStoryboardIdentifierAsRestorationIdentifier="YES" id="wRX-H1-73d" customClass="PatientDetailTVC" customModule="Appt" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="grouped" separatorStyle="none" rowHeight="64" sectionHeaderHeight="-1" sectionFooterHeight="-1" id="GhR-BV-Wx0">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="grouped" separatorStyle="none" rowHeight="64" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" id="GhR-BV-Wx0">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
@@ -1564,7 +1564,7 @@
                                                     </constraints>
                                                 </view>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="12:00" textAlignment="right" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rej-lt-Ogk">
-                                                    <rect key="frame" x="10" y="27" width="56.5" height="26.5"/>
+                                                    <rect key="frame" x="12" y="27" width="56.5" height="26.5"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -1573,7 +1573,7 @@
                                         </tableViewCellContentView>
                                         <color key="backgroundColor" red="0.93725490196078431" green="0.93725490196078431" blue="0.96470588235294119" alpha="1" colorSpace="calibratedRGB"/>
                                         <constraints>
-                                            <constraint firstItem="rej-lt-Ogk" firstAttribute="leading" secondItem="sic-WS-AXc" secondAttribute="leading" constant="10" id="02f-so-BOX"/>
+                                            <constraint firstItem="rej-lt-Ogk" firstAttribute="leading" secondItem="sic-WS-AXc" secondAttribute="leading" constant="12" id="02f-so-BOX"/>
                                             <constraint firstItem="yPZ-nK-vSd" firstAttribute="leading" secondItem="sic-WS-AXc" secondAttribute="leading" constant="116" id="SZe-cU-CWL"/>
                                             <constraint firstAttribute="trailing" secondItem="yPZ-nK-vSd" secondAttribute="trailing" constant="12" id="TV4-n6-aDa"/>
                                             <constraint firstItem="yPZ-nK-vSd" firstAttribute="top" secondItem="sic-WS-AXc" secondAttribute="top" constant="8" id="dcF-tu-D0c"/>
@@ -1757,7 +1757,7 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="-4" translatesAutoresizingMaskIntoConstraints="NO" id="8Df-dm-RH4" userLabel="Date StackView">
-                                                    <rect key="frame" x="29" y="20.5" width="70" height="39.5"/>
+                                                    <rect key="frame" x="12" y="20.5" width="70" height="39.5"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="NOV 24" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cgN-dZ-6Zb">
                                                             <rect key="frame" x="0.0" y="0.0" width="70" height="24"/>
@@ -1778,10 +1778,10 @@
                                                     </constraints>
                                                 </stackView>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rUJ-bD-rox" customClass="CardView" customModule="Appt" customModuleProvider="target">
-                                                    <rect key="frame" x="128" y="4" width="227" height="64"/>
+                                                    <rect key="frame" x="116" y="4" width="239" height="64"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Note" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5cr-Uu-nSQ">
-                                                            <rect key="frame" x="8" y="4" width="211" height="56"/>
+                                                            <rect key="frame" x="8" y="4" width="223" height="56"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                                             <color key="textColor" red="0.5568627451" green="0.5568627451" blue="0.5568627451" alpha="1" colorSpace="calibratedRGB"/>
                                                             <nil key="highlightedColor"/>
@@ -1797,7 +1797,7 @@
                                                 </view>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="rUJ-bD-rox" firstAttribute="leading" secondItem="qhj-Fo-O0t" secondAttribute="leading" constant="128" id="Rgy-Kl-Rhi"/>
+                                                <constraint firstItem="rUJ-bD-rox" firstAttribute="leading" secondItem="qhj-Fo-O0t" secondAttribute="leading" constant="116" id="Rgy-Kl-Rhi"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.96470588239999999" alpha="1" colorSpace="calibratedRGB"/>
@@ -1805,7 +1805,7 @@
                                             <constraint firstAttribute="trailing" secondItem="rUJ-bD-rox" secondAttribute="trailing" constant="20" id="3Ga-1z-88x"/>
                                             <constraint firstItem="rUJ-bD-rox" firstAttribute="top" secondItem="gzd-nH-QKH" secondAttribute="top" constant="4" id="L0X-mB-MrK"/>
                                             <constraint firstItem="8Df-dm-RH4" firstAttribute="centerY" secondItem="gzd-nH-QKH" secondAttribute="centerY" id="Mi8-QU-M0v"/>
-                                            <constraint firstItem="8Df-dm-RH4" firstAttribute="leading" secondItem="gzd-nH-QKH" secondAttribute="leading" constant="29" id="Sxg-gI-n8Y"/>
+                                            <constraint firstItem="8Df-dm-RH4" firstAttribute="leading" secondItem="gzd-nH-QKH" secondAttribute="leading" constant="12" id="Sxg-gI-n8Y"/>
                                             <constraint firstAttribute="bottom" secondItem="rUJ-bD-rox" secondAttribute="bottom" constant="12" id="fZa-bi-ufQ"/>
                                         </constraints>
                                         <connections>
